--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
 {
-  "name": "editor",
+  "name": "code_deck_coding_ide",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-javascript": "^6.1.1",
+    "@codemirror/lang-python": "^6.1.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@uiw/codemirror-theme-bespin": "^4.15.1",
+    "@uiw/codemirror-theme-dracula": "^4.15.1",
+    "@uiw/codemirror-theme-duotone": "^4.15.1",
+    "@uiw/codemirror-theme-github": "^4.15.1",
+    "@uiw/codemirror-theme-okaidia": "^4.15.1",
+    "@uiw/codemirror-theme-vscode": "^4.15.1",
+    "@uiw/codemirror-theme-xcode": "^4.15.1",
+    "@uiw/react-codemirror": "^4.15.1",
+    "axios": "^1.2.0",
+    "buffer": "^6.0.3",
+    "codemirror": "^6.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.1",
+    "styled-components": "^5.3.6",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
